[tool.poetry]
name = "bootcamp-2025"
version = "0.1.0"
description = ""
authors = ["Paul-Goodman-01 <paul.goodman@ncl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.2.3"
pyjanitor = "^0.31.0"
dask = {extras = ["complete"], version = "^2025.2.0"}
pyarrow = "^19.0.1"
streamlit = "^1.43.2"
plotly = "^6.0.1"
ruptures = "^1.1.9"
matplotlib = "^3.10.1"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
lightgbm = "^4.6.0"
numpy = "^2.2.4"
pyinstaller = "^6.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
